--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.idea/
+.vscode/
 .env
 .venv
 env/
@@ -124,6 +126,3 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
-.pyre/
