--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ opencv-python = "^4.5.5"
 fastapi = "^0.75.0"
 uvicorn = "^0.17.6"
 structlog = "^21.5.0"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 
